WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238562
CSP: WASM fails to execute after window.open
https://bugs.webkit.org/show_bug.cgi?id=238562
Summary
CSP: WASM fails to execute after window.open
Kate Cheney
Reported
2022-03-30 11:29:49 PDT
CSP: WASM fails to execute after window.open
Attachments
Patch
(120.02 KB, patch)
2022-03-30 11:37 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(120.86 KB, patch)
2022-03-31 08:44 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch for landing
(120.86 KB, patch)
2022-04-01 10:31 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2022-03-30 11:37:08 PDT
Created
attachment 456158
[details]
Patch
Kate Cheney
Comment 2
2022-03-30 11:37:38 PDT
rdar://90778752
Kate Cheney
Comment 3
2022-03-31 08:44:56 PDT
Created
attachment 456240
[details]
Patch
Brent Fulgham
Comment 4
2022-04-01 10:24:34 PDT
Comment on
attachment 456240
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=456240&action=review
r=me. It's a shame we don't have WPT that cover this, too.
> Source/WebCore/bindings/js/ScriptController.cpp:414 > + jsWindowProxy->window()->setEvalEnabled(value, errorMessage);
Nit: Not relevant for your patch, but I wonder if saving the identical string in every AbstractDOMWindow is good, since there is only one string used for either case (rather than a bunch of unique strings tailored to the window.
Kate Cheney
Comment 5
2022-04-01 10:28:31 PDT
(In reply to Brent Fulgham from
comment #4
)
> Comment on
attachment 456240
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=456240&action=review
> > r=me. It's a shame we don't have WPT that cover this, too. >
Thanks for the review!
> > Source/WebCore/bindings/js/ScriptController.cpp:414 > > + jsWindowProxy->window()->setEvalEnabled(value, errorMessage); > > Nit: Not relevant for your patch, but I wonder if saving the identical > string in every AbstractDOMWindow is good, since there is only one string > used for either case (rather than a bunch of unique strings tailored to the > window.
True, filed
rdar://91169940
.
Kate Cheney
Comment 6
2022-04-01 10:31:46 PDT
Created
attachment 456371
[details]
[fast-cq] Patch for landing
EWS
Comment 7
2022-04-01 12:27:56 PDT
Committed
r292229
(
249131@main
): <
https://commits.webkit.org/249131@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456371
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug