Source/WebCore/page/csp/ContentSecurityPolicy.h
@@ -198,6 +198,7 @@ public:
     bool isHeaderDelivered() const { return m_isHeaderDelivered; }
 
     const String& evalErrorMessage() const { return m_lastPolicyEvalDisabledErrorMessage; }
+    const String& webAssemblyErrorMessage() const { return m_lastPolicyWebAssemblyDisabledErrorMessage; }
 
     ContentSecurityPolicyModeForExtension contentSecurityPolicyModeForExtension() const { return m_contentSecurityPolicyModeForExtension; }
 
